fix: reduce sonar issues