@@ -8,7 +8,6 @@ import org.springframework.stereotype.Service;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,9 +18,12 @@ public class PearlExtractEntities {
     public List<PearlSurveyUnit> getPearlSurveyUnitsFromFods(File fods) throws Exception {
         File file = pearlTransformService.getPearlSurveyUnits(fods);
         XmlMapper xmlMapper = new XmlMapper();
-        SurveyUnits surveyUnits = xmlMapper.readValue(file, SurveyUnits.class);
-        return surveyUnits.getSurveyUnits() == null ? new ArrayList<>() :
-                surveyUnits.getSurveyUnits().stream().peek(PearlSurveyUnit::cleanAttributes).toList();
+        PearlSurveyUnits pearlSurveyUnits = xmlMapper.readValue(file, PearlSurveyUnits.class);
+        return pearlSurveyUnits.getSurveyUnits() == null ? new ArrayList<>() :
+                pearlSurveyUnits.getSurveyUnits().stream().map(surveyUnit -> {
+                    surveyUnit.cleanAttributes();
+                    return surveyUnit;
+                }).toList();
     }
 
     public PearlCampaign getPearlCampaignFromFods(File fods) throws Exception {
@@ -29,7 +31,7 @@ public class PearlExtractEntities {
         XmlMapper xmlMapper = new XmlMapper();
         PearlCampaign pearlCampaign = xmlMapper.readValue(file, PearlCampaign.class);
         List<Visibility> visibilities = pearlCampaign.getVisibilities();
-        List<Visibility> newVisibilities = visibilities.stream().map(Visibility::new).collect(Collectors.toList());
+        List<Visibility> newVisibilities = visibilities.stream().map(Visibility::new).toList();
         pearlCampaign.setVisibilities(newVisibilities);
         return pearlCampaign;
     }
@@ -38,7 +40,7 @@ public class PearlExtractEntities {
         File file = pearlTransformService.getPearlAssignement(fods);
         XmlMapper xmlMapper = new XmlMapper();
         Assignements assignementList = xmlMapper.readValue(file, Assignements.class);
-        return assignementList.getAssignements() != null ? assignementList.getAssignements() : new ArrayList<>();
+        return assignementList.getAssignments() != null ? assignementList.getAssignments() : new ArrayList<>();
     }
 
 }
